...
            <TextView
                android:id="@+id/welcomewords"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Welcome To The Wits App"
                android:textColor="#0D2C77"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/Login"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:backgroundTint="#0D48A1"
        android:text="Log In"
...
