<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/background_3"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="My Dashboard"
                android:textSize="34sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="#ffffff">

            </TextView>

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/nav_drawer"
                android:contentDescription="TODO">

            </ImageView>


        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnOrderPreserved="false"
            android:layout_marginTop="40dp"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:rowCount="3"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/profileCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="40dp"
                app:contentPaddingRight="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/user_icon"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Profile"
                        android:textColor="#0093CB"
                        android:textSize="22sp"
                        android:textStyle="bold"/>



                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/overflowCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="40dp"
                app:contentPaddingRight="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/discussion_forum"
                        />
                    <TextView
                        android:id="@+id/overflow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Overflow"
                        android:textColor="#0093CB"
                        android:textSize="22sp"
                        android:textStyle="bold"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/safespaceCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="40dp"
                app:contentPaddingRight="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/main_heart"
                        />
                    <TextView
                        android:id="@+id/safespace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Safe Space"
                        android:textColor="#0093CB"
                        android:textSize="20sp"
                        android:textStyle="bold"/>



                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/healthCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="40dp"
                app:contentPaddingRight="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/health_main"
                        />
                    <TextView
                        android:id="@+id/health"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Health"
                        android:textColor="#0093CB"
                        android:textSize="22sp"
                        android:textStyle="bold"/>



                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/accomodationCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="40dp"
                app:contentPaddingRight="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/accomodation"
                        />
                    <TextView
                        android:id="@+id/accomodation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Accomodation"
                        android:textColor="#0093CB"
                        android:textSize="16sp"
                        android:textStyle="bold"/>



                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/creativesCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="40dp"
                app:contentPaddingRight="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/creatives"
                        />
                    <TextView
                        android:id="@+id/creatives"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Creatives"
                        android:textColor="#0093CB"
                        android:textSize="22sp"
                        android:textStyle="bold"/>



                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </GridLayout>
    </LinearLayout>

</ScrollView>